closing of resources with jdbc pool